@@ -1,3 +1,8 @@
+2009-07-15  Tobias C. Rittweiler  <tcr@freebits.de>
+
+	* swank-sbcl-exts.lisp (compute-enriched-decoded-arglist): Filter
+	uninteresting arguments for SB-ASSEM:INST.
+
 2009-07-12  Helmut Eller  <heller@common-lisp.net>
 
 	* swank-kawa.scm (swank-writer): Use set! for now, as the svn
